update liveness probe

--- a/charts/celery-exporter/templates/deployment.yaml
+++ b/charts/celery-exporter/templates/deployment.yaml
@@ -40,6 +40,8 @@ spec:
               path: /health
               port: http
           livenessProbe:
+            failureThreshold: 10
+            periodSeconds: 30
             httpGet:
               path: /metrics
               port: http
