--- a/charts/celery-exporter/templates/deployment.yaml
+++ b/charts/celery-exporter/templates/deployment.yaml
@@ -42,6 +42,7 @@ spec:
           livenessProbe:
             failureThreshold: 10
             periodSeconds: 30
+            timeoutSeconds: 3
             httpGet:
               path: /metrics
               port: http
